testsuite/tests/gadt/T12468.stderr

T12468.hs:9:7: error:
    • Found hole: _ :: Int
    • In the expression: _
      In an equation for ‘f’: f I = _
    • Relevant bindings include f :: T a -> a (bound at T12468.hs:9:1)
